Fixed form on smaller screens

--- a/widescreen.css
+++ b/widescreen.css
@@ -174,6 +174,21 @@ header img{
 }
 
 
+@media screen and (min-width: 1280px) and (max-width: 1366px) {
+  .form {
+    position: absolute;
+    background: White;
+    right: 30px;
+    top: 30px;
+    padding: 1rem;
+  }
+  .form-section .form-group{
+    padding: 0.2rem;
+    /* height: 4rem; */
+  }
+
+}
+
 .form > div:nth-child(1) > form:nth-child(1) > h1:nth-child(1) {
   overflow-y: hidden;
 }
